Fixed issue with overflow in equations and tables in footnotes

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -248,6 +248,8 @@ hr.desktop-only {
     margin-left: auto;
     margin-right: auto;
     width: $pageWidth;
+    overflow-x: hidden;
+
     @media all and (max-width: $fullPageWidth) {
       width: initial;
       margin-left: 0;
